--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Kelly Portfolio</title>
   <!--favicon_start-->
-  <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/a6218d_c9c0536d10ee433da3c5fc4ed56e055a~mv2.png/v1/fill/w_48,h_48,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/grey_youi_logo.png">
+   <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/a6218d_c9c0536d10ee433da3c5fc4ed56e055a~mv2.png/v1/fill/w_48,h_48,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/grey_youi_logo.png">
   <!--favicon_end-->
   <link href="style.css" rel="stylesheet" />
   <!--font_start-->
@@ -14,6 +14,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <!--font_end-->
+  <!--social_media_icon_start-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!--social_media_icon_end-->
 </head>
 
 
@@ -29,8 +32,7 @@
         <div class="logo">
           <a href="index.html">
 
-          <img   src="https://static.wixstatic.com/media/a6218d_85cedc866c2043fa8814ecee661eef12~mv2.png/v1/crop/x_406,y_872,w_2806,h_737/fill/w_474,h_106,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/a6218d_85cedc866c2043fa8814ecee661eef12~mv2.png"
-            alt="Youi_logo" width="30%">
+          <img   src="https://static.wixstatic.com/media/a6218d_85cedc866c2043fa8814ecee661eef12~mv2.png/v1/crop/x_406,y_872,w_2806,h_737/fill/w_474,h_106,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/a6218d_85cedc866c2043fa8814ecee661eef12~mv2.png" alt="Youi_logo" width="30%">
             
           </a>
         </div>
@@ -51,61 +53,59 @@
   </header>
 
 
-
-
-
   <!--page06-->
 
-  <section class="page06">
-    <h3>Hi. I'm <span>Kelly Wong.</span></h3>
-    <hr>
-
-    <p>As a multi-talented professional with <span>approximately 4 years of experience in graphic design, 3D design, and web development,</span> I provide concepts and references as a graphic designer. As a 3D designer, I transform them into tangible templates and simulated images, while utilizing these creations to enhance web design as a web developer.<br>
-      <b><br> You can click on the boxes below, and then you will see all the projects related to the type you clicked on.</b>
-    </p>
+  <section class="page05">
 
 
+    <aside class="profile-card">
+      <header>
+        <!-- here’s the avatar -->
+        <a target="_blank" href="#">
+          <img src="https://mir-s3-cdn-cf.behance.net/user/138/ab02b9424516595.661e9a465520c.png" class="hoverZoomLink">
+        </a>
+
+        <!-- the username -->
+        <h4>Kelly Wong</h4>
+        <hr>
+
+        <p>
+          I am a quick learner with a keen eye for detail and a strong problem-solving mindset, allowing me to adapt quickly and deliver high-quality, innovative work. 
+        </p>
+        
+      </header>
 
 
-      <div class="page06cards">
 
-      <div class="page06container">
+      <!-- some social links to show off -->
+      <ul class="profile-social-links">
+        <li>
+          <a target="_blank" href="https://vimeo.com/user224420864">
+            <i class="fa fa-vimeo-square"></i>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.artstation.com/kellyw_777/profile">
+            <img src="https://cdn4.iconfinder.com/data/icons/social-media-2210/24/Artstation-1024.png" alt="ArtStation" width="20" height="20">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://github.com/kelly7y176">
+            <i class="fa fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.behance.net/kelly7y178686f">
 
+            <i class="fa fa-behance"></i>
+          </a>
+        </li>
+      </ul>
+   
+    </aside>
 
-        <div class="page06card01">
-           <a href="https://kelly7y178.editorx.io/youi">
-             <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#2854C5"><path d="M353.33-540H186.67q-27 0-46.84-19.83Q120-579.67 120-606.67v-166.66q0-27 19.83-46.84Q159.67-840 186.67-840h166.66q27 0 46.84 19.83Q420-800.33 420-773.33v166.66q0 27-19.83 46.84Q380.33-540 353.33-540Zm-166.66-66.67h166.66v-166.66H186.67v166.66ZM353.33-120H186.67q-27 0-46.84-19.83Q120-159.67 120-186.67v-166.66q0-27 19.83-46.84Q159.67-420 186.67-420h166.66q27 0 46.84 19.83Q420-380.33 420-353.33v166.66q0 27-19.83 46.84Q380.33-120 353.33-120Zm-166.66-66.67h166.66v-166.66H186.67v166.66ZM773.33-540H606.67q-27 0-46.84-19.83Q540-579.67 540-606.67v-166.66q0-27 19.83-46.84Q579.67-840 606.67-840h166.66q27 0 46.84 19.83Q840-800.33 840-773.33v166.66q0 27-19.83 46.84Q800.33-540 773.33-540Zm-166.66-66.67h166.66v-166.66H606.67v166.66ZM773.33-120H606.67q-27 0-46.84-19.83Q540-159.67 540-186.67v-166.66q0-27 19.83-46.84Q579.67-420 606.67-420h166.66q27 0 46.84 19.83Q840-380.33 840-353.33v166.66q0 27-19.83 46.84Q800.33-120 773.33-120Zm-166.66-66.67h166.66v-166.66H606.67v166.66Zm-253.34-420Zm0 253.34Zm253.34-253.34Zm0 253.34Z"/></svg>
-          <h4>UI / UX Design</h4></a>
-        </div>
-
-        <div class="page06cardmiddle">
-
-          <div class="page06cardinner1">
-            <a href="https://github.com/kelly7y176">
-              <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#2854C5"><path d="M146.67-160q-27 0-46.84-19.83Q80-199.67 80-226.67v-506.66q0-27 19.83-46.84Q119.67-800 146.67-800h666.66q27 0 46.84 19.83Q880-760.33 880-733.33v506.66q0 27-19.83 46.84Q840.33-160 813.33-160H146.67Zm0-66.67h666.66v-424H146.67v424ZM300-288l-46.67-46.67 103-104-104-104L300-589.33l150.67 150.66L300-288Zm186.67 2.67V-352h226.66v66.67H486.67Z"/></svg>
-            <h4>Full-Stack Development</h4></a>
-          </div>
-
-          <div class="page06cardinner2">
-
-            <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#2854C5"><path d="M446.67-163.67V-461l-260-150.33V-314l260 150.33Zm66.66 0 260-150.33v-298l-260 150.89v297.44ZM480-518l256.33-149L480-815.33 223-667l257 149ZM153.33-256q-15.83-9.28-24.58-24.48-8.75-15.19-8.75-33.19v-332.66q0-18 8.75-33.19 8.75-15.2 24.58-24.48l293.34-169q15.88-9 33.44-9 17.56 0 33.22 9l293.34 169q15.83 9.28 24.58 24.48 8.75 15.19 8.75 33.19v332.66q0 18-8.75 33.19-8.75 15.2-24.58 24.48L513.33-87q-15.88 9-33.44 9-17.56 0-33.22-9L153.33-256ZM480-480Z"/></svg>
-            <a href="https://kelly7y178.editorx.io/kellywshowreel">
-            <h4>3D Modelling / Animation / Rendering</h4></a>
-          </div>
-
-        </div>
-
-        <div class="page06card02">
-          <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#2854C5"><path d="M558.67-120Q506-120 471-156.33q-35-36.34-35-91.67 0-76 64.5-134.83Q565-441.67 659.67-452q-3-48.67-21.67-72.5t-54.67-23.83q-38 0-72.33 25.66-34.33 25.67-86.33 94-66 85.67-104.5 115.34-38.5 29.66-83.84 29.66-52.33 0-84.33-35.66Q120-355 120-413q0-39.33 23.17-92.17Q166.33-558 221-643.67q23.67-34.66 34.33-57.33Q266-723.67 266-738.67q0-9.66-5.83-15.16-5.84-5.5-16.84-5.5-14 0-31 11.83t-37 35.83L120-769.33q30.67-35.67 61-53.17t61.67-17.5q44 0 74 29.33 30 29.34 30 73.34 0 29.66-14.67 62-14.67 32.33-58.33 98.66-42.67 64-57.84 98.67-15.16 34.67-15.16 66.33 0 20.34 11.83 33.84 11.83 13.5 29.17 13.5 12.66 0 24.16-6.5t28.84-24.84q13-14 30-34.16 17-20.17 41-50.17 65-82.33 115-115.67 50-33.33 108.66-33.33 64.34 0 105 46.67 40.67 46.66 46 126.66H840V-375h-99.67q-8 117.33-56.83 186.17Q634.67-120 558.67-120Zm2.66-80.67q39.34 0 66.67-46.83t32.67-123.83Q601.33-363 559-325.5t-42.33 80.83q0 20.67 11.66 32.34 11.67 11.66 33 11.66Z"/></svg></svg>
-           <a href="https://kelly7y178.editorx.io/youi">
-          <h4>Graphic Design</h4></a>
-        </div>
-
-
-      </div>
-
-  </section>
-
+  
+</section>
 
 
   <script src="script.js"></script>
