--- a/about.html
+++ b/about.html
@@ -109,6 +109,15 @@
 
 
   <script src="script.js"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KBGP3TGF1X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KBGP3TGF1X');
+</script>
 </body>
 
 <footer>
