--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,15 @@
   <!--font_end-->
 </head>
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KBGP3TGF1X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KBGP3TGF1X');
+</script>
 
 <body>
 
