--- a/about.html
+++ b/about.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
 
+
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PZBKXTS4');</script>
+<!-- End Google Tag Manager -->
+
+  
 <head>
+ 
+
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Kelly Portfolio</title>
@@ -30,7 +43,13 @@
 </script>
 
 <body>
+  
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZBKXTS4"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
+  
   <header>
 
     <!--nav-bar-->
